# CmakeSeries

./: README.md
Multi/include/: function.h
Multi/src/: CMakeLists.txt  function.cpp  main.cpp
Single/source/: CMakeLists.txt  main.cpp
